--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,8 +1,17 @@
 :root {
     --sns-link-size: 200px;
     --sns-link-icon-size: 120px;
-    --sns-link-icon-hover-size: 170px;
+    --sns-link-icon-hover-size: 160px;
+    --border-thickness: .4vw;
 }
+@media (max-width: 1024px) {
+    :root {
+        --sns-link-size: 100px;
+        --sns-link-icon-size: 60px;
+        --sns-link-icon-hover-size: 80px;
+    }
+}
+
 
 body {
     font-family: 'Apple Color Emoji', 'Inter', sans-serif;
@@ -46,6 +55,7 @@ strong {
 
 .background-image {
     background-image: url("images/backgroundImage.jpg");
+    background-size: 100vw auto;
     background-size: auto 100vh;
     top: 0;
     position: fixed;
@@ -56,6 +66,12 @@ strong {
     filter: saturate(55%);
     animation: background-change 12s linear infinite; /* 回転アニメーションを適用 */
 
+}
+
+@media screen and (min-aspect-ratio: 3/2) {
+    .background-image {
+        background-size: 100vw auto;
+    }
 }
 
 .heart {
@@ -113,16 +129,15 @@ strong {
 }
 
 .contents img {
-    width: 500px;
+    width: 26vw;
 }
 
-.liver-image-right::before {
-    left: calc(75% - 258px);
-    top: calc(50% - 258px);
+.liver-image::before {
+    top: calc(50% - 13.5vw);
     content: "";
     position: absolute;
-    width: 516px;
-    height: 516px;
+    width: 27vw;
+    height: 27vw;
     border-radius: 100%;
     background: conic-gradient(
         from 0deg, /* 初期回転角度 */
@@ -132,52 +147,56 @@ strong {
     );
     animation: rotate 10s linear infinite; /* 回転アニメーションを適用 */
     z-index: -1; /* 背景として配置 */
+}
+.liver-image-right::before {
+    left: calc(75% - 13.5vw);
 }
 
 .liver-image-left::before {
-    right: calc(75% - 258px);
-    top: calc(50% - 258px);
-    content: "";
-    position: absolute;
-    width: 516px;
-    height: 516px;
-    border-radius: 100%;
-    background: conic-gradient(
-        from 0deg, /* 初期回転角度 */
-        rgb(242, 51, 245) 0deg 120deg,        /* 左上 */
-        rgb(70, 178, 255) 120deg 240deg,     /* 右上 */
-        rgb(167, 231, 64) 240deg 360deg  /* 右下 */
-    );
-    animation: rotate 10s linear infinite; /* 回転アニメーションを適用 */
-    z-index: -1; /* 背景として配置 */
+    right: calc(75% - 13.5vw);
 }
 
 
 .description {
-    width: 620px;
-    height: 290px;
+    width: 32vw;
+    height: 17vw;
     background-color: #FFFFFF;
-    border-radius: 50px;
-    /* border: 5px solid #FF6CC4; */
-
-    /* color: #FFFFFF; */
-    /* background-color: rgba(255, 117, 135, 0.9); */
 }
 
 .description span {
-    font-size: 40px;
+    font-size: 2vw;
 }
 
 /* 親要素のスタイル */
 .description-anime {
     border-radius: 50px; /* 角を丸くする */
-    padding: 7px; /* ボーダーの幅 */
+    border-radius: 3vw;
+    padding: var(--border-thickness); /* ボーダーの幅 */
+    padding: 1vw;
     box-sizing: border-box; /* パディングを含めたサイズ計算 */
     overflow: hidden; /* 擬似要素がはみ出さないようにする */
     align-items: center;
     justify-content: center;
 }
 
+.description-2 {
+    color: #FFFFFF;
+    background-color: rgba(85, 207, 255, 0.9); /* 背景色を50%透過 */
+    border: 0px solid;
+    border-radius: 20px;
+    margin-bottom: 2em;
+}
+
+.description-2::after {
+    content: "";
+    position: absolute;
+    top: 50%; /* 縦方向で中央に配置 */
+    right: -7.9vw; /* 親要素の外に三角形を配置 */
+    transform: translateY(-50%); /* 三角形を縦方向に中央揃え */
+    border-width: 4vw;
+    border-style: solid;
+    border-color: transparent transparent transparent rgba(85, 207, 255, 0.9); /* 背景色と同じ色の右向き三角形 */
+}
 /* 擬似要素による回転するグラデーションボーダー */
 .description-anime::before {
     content: "";
@@ -203,14 +222,21 @@ strong {
 .description-anime::after {
     content: "";
     position: absolute;
-    top: 7px; /* ::before の padding と一致させる */
-    left: 7px;
-    right: 7px;
-    bottom: 7px;
+    top: var(--border-thickness); /* ::before の padding と一致させる */
+    left: var(--border-thickness);
+    right: var(--border-thickness);
+    bottom: var(--border-thickness);
     background-color: #FFFFFF; /* 内部を白く設定 */
     border-radius: inherit; /* 親要素と同じ角の丸み */
     z-index: -1; /* コンテンツより前面に表示 */
 }
+
+.splash {
+    z-index: 100;
+    position: fixed;
+}
+
+
 
 /* アニメーションの定義 */
 @keyframes rotate {
@@ -261,34 +287,12 @@ strong {
 }
 
 .height-800px {
-    height: 800px;
-}
-
-.description-2 {
-    position: relative; /* 吹き出しのために相対位置を設定 */
-    color: #FFFFFF;
-    background-color: rgba(85, 207, 255, 0.9); /* 背景色を50%透過 */
-    border: 0px solid;
-    border-radius: 20px;
-    width: 650px;
-    margin-bottom: 2em;
-}
-
-.description-2::after {
-    content: "";
-    position: absolute;
-    top: 50%; /* 縦方向で中央に配置 */
-    right: -159px; /* 親要素の外に三角形を配置 */
-    transform: translateY(-50%); /* 三角形を縦方向に中央揃え */
-    border-width: 80px;
-    border-style: solid;
-    border-color: transparent transparent transparent rgba(85, 207, 255, 0.9); /* 背景色と同じ色の右向き三角形 */
+    /* height: 800px; */
+    height: 43vw;
 }
 
 
-.description-2 span {
-    font-size: 40px;
-}
+
 
 .text-left {
     text-align: left;
@@ -296,9 +300,9 @@ strong {
 }
 
 .name {
-    font-size: 50px;
+    font-size: 3vw;
     text-decoration: underline;
-    padding-bottom: 30px;
+    padding-bottom: 2vw;
 }
 
 
@@ -306,20 +310,21 @@ strong {
 .smartphone img {
     position: absolute;
     display: flex;
-    height: 700px;
+    height: 36vw;
     width: auto;
 }
 
 .smartphone-frame img {
-    height: 720px;
+    height: 38vw;
     width: auto;
     z-index: 3;
 }
 
 
 .swiper {
-    height: 700px;
+    height: 36vw;
     top: 50px;
+    top: 3vw;
     width: auto;
     z-index: 5;
     position: relative;
@@ -331,9 +336,3 @@ strong {
 
 
 
-@media screen and (min-aspect-ratio: 3/2) {
-    .background-image {
-        background-size: 100vw auto;
-        /* 縦幅を100vhに合わせる */
-    }
-}
