--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,8 +35,8 @@ img {
 }
 
 h1 {
-    font-size: 3vw;
-    margin-top: 3em;
+    font-size: 4vw;
+    margin-top: 2em;
     margin-bottom: 0;
     padding: 0;
 }
@@ -300,7 +300,7 @@ strong {
 }
 .description-comment {
     color: #000000;
-    background-color: rgba(255, 255, 255, 0.95); /* 背景色を50%透過 */
+    background-color: rgba(255, 255, 255, 1); /* 背景色を50%透過 */
     height: calc(var(--description-width-size)/4);
 }
 .description-comment::after {
@@ -490,10 +490,13 @@ strong {
 		width: .5vw;
 		opacity: 1;
 	}
-	100% {
-		width: 20vw;
-		opacity: 0;
+	75% {
+		width: 25vw;
+		opacity: 1;
 	}
+    75%, 100% {
+        opacity: 0;
+    }
 }
 
 .c-firework,
@@ -528,12 +531,19 @@ strong {
     radial-gradient(circle, #fff 10px, #000 0) 5% 95%,
     radial-gradient(circle, rgb(255, 170, 0) 10px, #000 0) 70% 25%,
     radial-gradient(circle, #ff0 10px, #000 0) 10% 40%,
-    radial-gradient(circle, rgb(255, 170, 0) 10px, #000 0) 30% 10%;
+    radial-gradient(circle, rgb(255, 170, 0) 10px, #000 0) 30% 10%,
+    radial-gradient(circle, rgb(255, 255, 255) 10px, #000 0) 20% 20%,
+    radial-gradient(circle, rgb(255, 170, 0) 10px, #000 0) 75% 75%,
+    radial-gradient(circle, rgb(255, 0, 0) 10px, #000 0) 15% 70%,
+    radial-gradient(circle, #ff0 10px, #000 0) 65% 35%,
+    radial-gradient(circle, rgb(255, 170, 0) 10px, #000 0) 35% 65%,
+    radial-gradient(circle, #fff 10px, #000 0) 45% 55%,
+    radial-gradient(circle, rgb(255, 0, 0) 10px, #000 0) 55% 45%;
 	background-size: .3vw .3vw;
 	background-repeat: no-repeat;
 	transform: translate(-50%, -50%);
 	animation: fireworks-animation 8s infinite;
-    z-index: 100;
+    z-index: 5;
 }
 .c-firework::before {
 	transform: translate(-50%, -50%) rotate(25deg) !important;
@@ -554,7 +564,7 @@ strong {
         --border-thickness: .6vw;
     }
     h1 {
-        font-size: 6vw;
+        font-size: 7vw;
     }
     .contents {
         width: 95%;
@@ -601,7 +611,7 @@ strong {
         --sns-link-icon-size: 42px;
         --sns-link-icon-hover-size: 56px;
         --liver-image-size: 65vw;
-        --description-width-size: 47vw;
+        --description-width-size: 42vw;
     }
     .flex-reverse {
         flex-direction: column-reverse;
@@ -638,5 +648,29 @@ strong {
     .content {
         margin-top: 0em;
         margin-bottom: 0em;
+    }
+    .c-firework,
+    .c-firework::after,
+    .c-firework::before {
+        top: 0%;
+    }
+
+    @keyframes fireworks-animation {
+        0% {
+            transform: translate(-50%, 80vh);
+            width: .5vw;
+            opacity: 1;
+        }
+        50% {
+            width: .5vw;
+            opacity: 1;
+        }
+        75% {
+            width: 35vw;
+            opacity: 1;
+        }
+        75%, 100% {
+            opacity: 0;
+        }
     }
 }
