--- a/assets/styles.css
+++ b/assets/styles.css
@@ -80,6 +80,7 @@ img {
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
+
 }
 
 .center {
@@ -199,6 +200,7 @@ strong {
     background-color: rgb(255, 255, 255);
     border-radius: 50%;
     top: 0;
+    margin-bottom: 4vw;
 }
 
 .sns-link a {
@@ -280,11 +282,13 @@ strong {
     height: calc(var(--description-white-width-size)/2);
     background-color: #FFFFFF;
 }
+
 .description-white span {
     font-size: calc(var(--description-white-width-size)/16);
     position: relative;
     display: block;
 }
+
 .description-frame {
     height: var(--liver-image-size);
     margin: 0;
@@ -580,7 +584,28 @@ strong {
     margin-left: 3%;
 }
 
-
+.sns-links .description-white {
+    width: calc(1.3 * var(--description-width-size));
+    height: calc(var(--description-width-size)/4.5);
+    position: relative;
+    display: block;
+    text-align: center;
+    border-radius: calc(var(--description-white-width-size)/10);
+    padding: var(--border-thickness); /* ボーダーの幅 */
+    padding: calc(var(--description-white-width-size)/32);
+    box-sizing: border-box; /* パディングを含めたサイズ計算 */
+    overflow: hidden; /* 擬似要素がはみ出さないようにする */
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1vw;
+}
+.sns-links span {
+    font-size: calc(var(--description-width-size)/16);
+}
+.sns-links strong {
+    font-size: calc(var(--description-width-size)/14);
+    color: rgb(255, 0, 166);
+}
 
 .smartphone img {
     position: absolute;
@@ -857,6 +882,12 @@ strong {
     .c-firework::before {
         top: 0%;
     }
+
+    .sns-links .description-white {
+        top: 0;
+    }
+
+    
 
     @keyframes fireworks-animation {
         0% {
